cmake files updated

--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -10,17 +10,20 @@ set(PROJECT_CONFIG_ARCH "" CACHE STRING "Architecture")
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
 set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_GROUP}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
 
-# Suppress macOS X RPATH warnings and adopt new related behaviors
-if(NOT CMAKE_VERSION VERSION_LESS 3.9)
-    cmake_policy(SET CMP0068 NEW)
-endif()
-
 # Platform configurations
+set(CMAKE_MACOSX_BUNDLE YES)
+set(CMAKE_OSX_ARCHITECTURES "${PROJECT_CONFIG_ARCH}")
+
 set(DEVELOPMENT_TEAM_ID "" CACHE STRING "Development Team ID")
 set(CODE_SIGN_IDENTITY "" CACHE STRING "Sign Identity")
 set(FRAMEWORK_NAME "${PROJECT_CONFIG_NAME}" CACHE STRING "Framework Name")
 set(FRAMEWORK_BUNDLE_IDENTIFIER "com.ezored.library" CACHE STRING "Bundle Identifier")
 set(DEVICE_FAMILY "1,2" CACHE STRING "Device Family")
+
+# Suppress macOS X RPATH warnings and adopt new related behaviors
+if(NOT CMAKE_VERSION VERSION_LESS 3.9)
+    cmake_policy(SET CMP0068 NEW)
+endif()
 
 # Project
 project(${PROJECT_CONFIG_NAME})
@@ -226,10 +229,10 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"
     XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "${CMAKE_OSX_DEPLOYMENT_TARGET}"
     XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${CODE_SIGN_IDENTITY}"
-    XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO"
+    XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED NO
     XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${DEVELOPMENT_TEAM_ID}"
     XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "${DEVICE_FAMILY}"
-    XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH NO
+    XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH YES
     XCODE_ATTRIBUTE_SKIP_INSTALL YES
     XCODE_ATTRIBUTE_INSTALL_PATH "@loader_path/Frameworks"
 
