--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles    
     script:
-      - python make.py target ios_framework conan > /dev/null 2>&1
+      - export CONAN_LOGGING_LEVEL=40
+      - export VERBOSE=0
+      - python make.py target ios_framework conan
       - python make.py target ios_framework build
       - python make.py target ios_framework package
       - python make.py target ios_framework package_xcframework
@@ -45,6 +47,8 @@ jobs:
       - conan profile update settings.compiler.libcxx=libstdc++11 default
       - python make.py conan install_profiles
     script:
-      - python make.py target linux_app conan > /dev/null 2>&1
+      - export CONAN_LOGGING_LEVEL=40
+      - export VERBOSE=0
+      - python make.py target linux_app conan
       - python make.py target linux_app build
       - python make.py target linux_app package
