--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ jobs:
   include:
   - os: osx
     osx_image: xcode11.2
+    env:
+      - CONAN_LOGGING_LEVEL=30
+      - VERBOSE=0
     install:
       - pip install conan    
       - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
@@ -15,6 +18,9 @@ jobs:
       - python make.py target macos_app package
   - os: osx
     osx_image: xcode11.2
+    env:
+      - CONAN_LOGGING_LEVEL=30
+      - VERBOSE=0
     install:
       - pip install conan  
       - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
@@ -23,8 +29,6 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles    
     script:
-      - export CONAN_LOGGING_LEVEL=40
-      - export VERBOSE=0
       - python make.py target ios_framework conan
       - python make.py target ios_framework build
       - python make.py target ios_framework package
@@ -39,6 +43,9 @@ jobs:
         packages:
           - gcc-multilib
           - g++-multilib
+    env:
+      - CONAN_LOGGING_LEVEL=30
+      - VERBOSE=0
     install:
       - pip install conan
       - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
@@ -47,8 +54,6 @@ jobs:
       - conan profile update settings.compiler.libcxx=libstdc++11 default
       - python make.py conan install_profiles
     script:
-      - export CONAN_LOGGING_LEVEL=40
-      - export VERBOSE=0
       - python make.py target linux_app conan
       - python make.py target linux_app build
       - python make.py target linux_app package
