--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles
     script:
-      - python make.py target macos_app conan
+      - python make.py target macos_app conan > output.txt
       - python make.py target macos_app build
       - python make.py target macos_app package
+    after_failure:
+      - tail -n 500 output.txt  
   - os: osx
     osx_image: xcode11.2
     env:
@@ -29,11 +31,13 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles    
     script:
-      - python make.py target ios_framework conan
+      - python make.py target ios_framework conan > output.txt
       - python make.py target ios_framework build
       - python make.py target ios_framework package
       - python make.py target ios_framework package_xcframework
       - python make.py target ios_framework gen_bridge_header
+    after_failure:
+      - tail -n 500 output.txt    
   - os: linux
     dist: xenial
     language: python
@@ -54,6 +58,8 @@ jobs:
       - conan profile update settings.compiler.libcxx=libstdc++11 default
       - python make.py conan install_profiles
     script:
-      - python make.py target linux_app conan
+      - python make.py target linux_app conan > output.txt
       - python make.py target linux_app build
       - python make.py target linux_app package
+    after_failure:
+      - tail -n 500 output.txt    
