--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles
     script:
-      - python make.py target macos_app conan > output.txt
+      - travis_wait 30 python make.py target macos_app conan > output.txt
       - python make.py target macos_app build
       - python make.py target macos_app package
     after_failure:
@@ -31,7 +31,7 @@ jobs:
       - conan profile new default --detect
       - python make.py conan install_profiles    
     script:
-      - python make.py target ios_framework conan > output.txt
+      - travis_wait 30 python make.py target ios_framework conan > output.txt
       - python make.py target ios_framework build
       - python make.py target ios_framework package
       - python make.py target ios_framework package_xcframework
@@ -58,7 +58,7 @@ jobs:
       - conan profile update settings.compiler.libcxx=libstdc++11 default
       - python make.py conan install_profiles
     script:
-      - python make.py target linux_app conan > output.txt
+      - travis_wait 30 python make.py target linux_app conan > output.txt
       - python make.py target linux_app build
       - python make.py target linux_app package
     after_failure:
