added github actions

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -90,43 +90,35 @@ jobs:
     - name: Configure Conan
       shell: cmake -P {0}
       run: |
-        execute_process(
-          COMMAND "pip install conan"
-        )
+        execute_process(COMMAND "pip install conan" RESULT_VARIABLE result)
+        message("result='${result}'")
 
-        execute_process(
-          COMMAND "conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan"
-        )
+        execute_process(COMMAND "conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan" RESULT_VARIABLE result)
+        message("result='${result}'")
 
-        execute_process(
-          COMMAND "conan remote add darwin-toolchain https://api.bintray.com/conan/ezored/conan-darwin-toolchain"
-        )
+        execute_process(COMMAND "conan remote add darwin-toolchain https://api.bintray.com/conan/ezored/conan-darwin-toolchain" RESULT_VARIABLE result)
+        message("result='${result}'")
 
-        execute_process(
-          COMMAND "conan profile new default --detect"
-        )
+        execute_process(COMMAND "conan profile new default --detect" RESULT_VARIABLE result)
+        message("result='${result}'")
 
-        execute_process(
-          COMMAND "python make.py conan install_profiles"
-        )
+        execute_process(COMMAND "python make.py conan install_profiles" RESULT_VARIABLE result)
+        message("result='${result}'")
 
     - name: Ezored - Conan
       shell: cmake -P {0}
       run: |
-        execute_process(
-          COMMAND "python make.py target ${{ matrix.config.environment_script }} conan"
-        )
+        execute_process(COMMAND "python make.py target ${{ matrix.config.environment_script }} conan" RESULT_VARIABLE result)
+        message("result='${result}'")
 
     - name: Ezored - Build
       shell: cmake -P {0}
       run: |
-        execute_process(
-          COMMAND "python make.py target ${{ matrix.config.environment_script }} build"
-        )
+        execute_process(COMMAND "python make.py target ${{ matrix.config.environment_script }} build" RESULT_VARIABLE result)
+        message("result='${result}'")
 
     - name: Ezored - Package
       shell: cmake -P {0}
       run: |
-        execute_process(
-          COMMAND "python make.py target ${{ matrix.config.environment_script }} package"
-        )
+        execute_process(COMMAND "python make.py target ${{ matrix.config.environment_script }} package" RESULT_VARIABLE result)
+        message("result='${result}'")
