--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -41,10 +41,14 @@ jobs:
             cc: "clang", cxx: "clang++",
             target: "macos_app"
           }
+        python-version: [3.7]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+    
     - name: Install Ninja and CMake
       id: cmake_and_ninja
       shell: cmake -P {0}
