--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -48,7 +48,12 @@ jobs:
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
     
+    - name: Upgrade PIP
+      run: python -m pip install --upgrade pip
+
     - name: Install Ninja and CMake
       id: cmake_and_ninja
       shell: cmake -P {0}
