--- a/.github/workflows/ezored.yml
+++ b/.github/workflows/ezored.yml
@@ -20,7 +20,7 @@ jobs:
             name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
             os: windows-latest,
             cc: "cl", cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2017/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
+            environment_script: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat",
             target: "windows_app"
           }
         - {
@@ -111,7 +111,7 @@ jobs:
 
     - name: Configure specific things
       if: matrix.config.environment_script
-      run: ${{ matrix.config.environment_script }}
+      run: call "${{ matrix.config.environment_script }}"
 
     - name: Ezored - Core
       run: git clone https://github.com/ezored/ezored-core.git ezored
