--- a/.github/workflows/ezored.yml
+++ b/.github/workflows/ezored.yml
@@ -111,7 +111,7 @@ jobs:
 
     - name: Configure specific things
       if: matrix.config.environment_script
-      run: "${{ matrix.config.environment_script }}"
+      run: call "${{ matrix.config.environment_script }}"
 
     - name: Ezored - Core
       run: git clone https://github.com/ezored/ezored-core.git ezored
