--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,9 +15,9 @@ jobs:
       matrix:
         config:
         - {
-            name: "macOS Latest Clang",
-            os: macos-latest,
-            target: "ios_framework"
+            name: "Ubuntu Latest GCC",
+            os: ubuntu-latest,
+            target: "android_aar"
           }
         python-version: [3.7]
 
