added github actions

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -82,14 +82,8 @@ jobs:
           )
         endif()
 
-    - name: Install Android sdkmanager
-      run: |
-        wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
-        sudo unzip -d $ANDROID_HOME android-sdk.zip > /dev/null
-
     - name: Install required Android tools
-      run: |
-        echo "y" | sudo $ANDROID_HOME/tools/bin/sdkmanager "ndk;${ANDROID_NDK}" > /dev/null
+      run: echo "y" | sudo ${ANDROID_ROOT}/tools/bin/sdkmanager "ndk;${ANDROID_NDK}" > /dev/null
 
     - name: Configure Conan
       run: |
