--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,6 @@ on: [push]
 env:
   CMAKE_VERSION: "3.16.2"
   NINJA_VERSION: "1.9.0"
-  ANDROID_NDK: "20.0.5594570"
 
 jobs:
   build:
@@ -81,8 +80,8 @@ jobs:
           )
         endif()
 
-    - name: Install required Android tools
-      run: echo "y" | sudo /usr/local/lib/android/tools/bin/sdkmanager "ndk;${ANDROID_NDK}" > /dev/null
+    - name: Install Android NDK
+      run: echo "y" | sudo /usr/local/lib/android/tools/bin/sdkmanager "ndk;20.0.5594570" > /dev/null
 
     - name: Configure Conan
       run: |
