--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -80,9 +80,6 @@ jobs:
           )
         endif()
 
-    - name: Install Android NDK
-      run: echo "y" | sudo /usr/local/lib/android/tools/bin/sdkmanager "ndk;20.0.5594570" > /dev/null
-
     - name: Configure Conan
       run: |
         pip install conan
@@ -103,4 +100,4 @@ jobs:
       run: python make.py target ${{ matrix.config.target }} build
 
     - name: Ezored - Package
-      run: python make.py target ${{ matrix.config.target }} package
+      run: sudo python make.py target ${{ matrix.config.target }} package
