--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -81,7 +81,7 @@ jobs:
         endif()
 
     - name: Install NDK
-      run: echo "y" | /usr/local/lib/android/tools/bin/sdkmanager --install 'ndk;20.0.5594570'
+      run: echo "y" | sudo /usr/local/lib/android/tools/bin/sdkmanager --install 'ndk;20.0.5594570'
 
     - name: Configure Conan
       run: |
