updated cmake and modules

--- a/files/targets/windows_app/cmake/CMakeLists.txt
+++ b/files/targets/windows_app/cmake/CMakeLists.txt
@@ -2,10 +2,11 @@
 cmake_minimum_required(VERSION 3.1)
 get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)
 
-set(PROJECT_CONFIG_NAME "Sample" CACHE STRING "Project name")
-set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "11")
-set(PROJECT_TARGET_NAME "windows_app" CACHE STRING "Target name")
-set(PROJECT_CONFIG_ARCH "" CACHE STRING "Architecture")
+set(PROJECT_CONFIG_NAME "Sample" CACHE STRING "Project Name")
+set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
+set(PROJECT_TARGET_NAME "windows_app" CACHE STRING "Target Name")
+set(PROJECT_CONFIG_ARCH "x86_64" CACHE STRING "Architecture")
+
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
 set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
 
