--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -2,11 +2,13 @@
 cmake_minimum_required(VERSION 3.1)
 get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)
 
-set(PROJECT_CONFIG_NAME "Ezored" CACHE STRING "Project name")
-set(PROJECT_CONFIG_VERSION "1.0.0" CACHE STRING "")
-set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "11")
-set(PROJECT_TARGET_NAME "ios_framework" CACHE STRING "Target name")
-set(PROJECT_CONFIG_ARCH "" CACHE STRING "Architecture")
+set(PROJECT_CONFIG_NAME "Ezored" CACHE STRING "Project Name")
+set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
+set(PROJECT_TARGET_NAME "ios_framework" CACHE STRING "Target Name")
+set(PROJECT_CONFIG_ARCH "armv8" CACHE STRING "Architecture")
+set(PROJECT_CONFIG_VERSION "1.0.0" CACHE STRING "Version")
+set(PROJECT_CONFIG_GROUP "ios" CACHE STRING "Group")
+
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
 set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_GROUP}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
 
