project update to new architecture

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -90,8 +90,8 @@ jobs:
         conan remote add darwin-toolchain https://api.bintray.com/conan/ezored/conan-darwin-toolchain
         conan profile new default --detect        
 
-    - name: Ezored - Core
-      run: git clone https://github.com/ezored/ezored-core.git ezored
+    - name: Ezored - Install python dependencies
+      run: pip install -r requirements.txt
 
     - name: Ezored - Install profiles
       run: python make.py conan install_profiles
