--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,7 +3,7 @@ name: Ezored - macOS
 on: [push]
 
 env:
-  CMAKE_VERSION: "3.16.2"
+  CMAKE_VERSION: "3.14.1"
   NINJA_VERSION: "1.9.0"
 
 jobs:
@@ -98,3 +98,6 @@ jobs:
 
     - name: Ezored - Build
       run: python make.py target ${{ matrix.config.target }} build
+
+    - name: Ezored - Package
+      run: python make.py target ${{ matrix.config.target }} package
