--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -104,3 +104,6 @@ jobs:
 
     - name: Ezored - Package XCFramework
       run: python make.py target ${{ matrix.config.target }} package_xcframework
+
+    - name: Ezored - Dist Generate
+      run: python make.py target ${{ matrix.config.target }} dist generate --version=1.0.0
