--- a/files/targets/linux_app/cmake/CMakeLists.txt
+++ b/files/targets/linux_app/cmake/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.14.1)
 get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" REALPATH)
 
-set(PROJECT_CONFIG_NAME "Sample" CACHE STRING "Project Name")
+set(PROJECT_CONFIG_NAME "ezored" CACHE STRING "Project Name")
 set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
 set(PROJECT_TARGET_NAME "linux_app" CACHE STRING "Target Name")
 set(PROJECT_CONFIG_ARCH "x86_64" CACHE STRING "Architecture")
@@ -24,7 +24,7 @@ add_subdirectory(
 )
 
 # Source files
-file(GLOB S_FILES_PROJECT "${PROJECT_ROOT_PATH}/projects/samples/simple/*.cpp")
+file(GLOB S_FILES_PROJECT "${PROJECT_ROOT_PATH}/projects/ezored/*.cpp")
 
 file(GLOB H_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.hpp")
 file(GLOB S_FILES_LOGGER_LIB_IMPL "${PROJECT_ROOT_PATH}/files/src/logger/cpp/ezored/util/Simple*.cpp")
