project update to new architecture

--- a/files/targets/android_aar/cmake/CMakeLists.txt
+++ b/files/targets/android_aar/cmake/CMakeLists.txt
@@ -5,6 +5,7 @@ get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" 
 set(PROJECT_CONFIG_NAME "ezored" CACHE STRING "Project Name")
 set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
 set(PROJECT_TARGET_NAME "android_aar" CACHE STRING "Target Name")
+set(PROJECT_CONFIG_VERSION "1.0.0" CACHE STRING "Version")
 set(PROJECT_CONFIG_ARCH "armv8" CACHE STRING "Architecture")
 
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
@@ -174,3 +175,4 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
 )
 
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
+target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}")
