--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -5,8 +5,8 @@ get_filename_component(CMAKE_SOURCE_REALPATH "${CMAKE_SOURCE_DIR}/../../../../" 
 set(PROJECT_CONFIG_NAME "ezored" CACHE STRING "Project Name")
 set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "Cpp Standard")
 set(PROJECT_TARGET_NAME "ios_framework" CACHE STRING "Target Name")
-set(PROJECT_CONFIG_ARCH "armv8" CACHE STRING "Architecture")
 set(PROJECT_CONFIG_VERSION "1.0.0" CACHE STRING "Version")
+set(PROJECT_CONFIG_ARCH "armv8" CACHE STRING "Architecture")
 set(PROJECT_CONFIG_GROUP "ios" CACHE STRING "Group")
 
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
@@ -245,3 +245,4 @@ if(NOT CMAKE_SKIP_BUILD_RPATH)
 endif()
 
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
+target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}")
