--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -80,13 +80,6 @@ jobs:
           )
         endif()
 
-    - name: Configure Conan
-      run: |
-        pip install conan
-        conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
-        conan remote add darwin-toolchain https://api.bintray.com/conan/ezored/conan-darwin-toolchain
-        conan profile new default --detect        
-
     - name: Ezored - Install python dependencies
       run: pip install -r requirements.txt
 
@@ -95,7 +88,7 @@ jobs:
         python make.py gluecode setup
         python make.py gluecode version
 
-    - name: Ezored - Install profiles
+    - name: Ezored - Setup conan
       run: python make.py conan setup
 
     - name: Ezored - Prepare
@@ -107,5 +100,5 @@ jobs:
     - name: Ezored - Package
       run: python make.py target ${{ matrix.config.target }} package
 
-    - name: Ezored - Dist Generate
-      run: python make.py target ${{ matrix.config.target }} dist generate --version=1.0.0
+    - name: Ezored - Dist generate
+      run: python make.py target ${{ matrix.config.target }} dist generate
