--- a/files/targets/windows_app/cmake/CMakeLists.txt
+++ b/files/targets/windows_app/cmake/CMakeLists.txt
@@ -71,6 +71,11 @@ set(
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}" CACHE INTERNAL "")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}" CACHE INTERNAL "")
 
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
+set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O3")
+
 # Project
 include_directories(${PROJECT_HEADER_SEARCH_PATHS})
 link_directories(${PROJECT_LIBRARY_SEARCH_PATHS})
@@ -83,8 +88,8 @@ target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")
 
 set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
-    CXX_STANDARD_REQUIRED true
-    CXX_EXTENSIONS false
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
     PUBLIC_HEADER "${PROJECT_HEADER_FILES}"  
 )
 
